Alignment fix

--- a/sgem-emergency-fund-calculator/assets/css/efs-cal-calculator.css
+++ b/sgem-emergency-fund-calculator/assets/css/efs-cal-calculator.css
@@ -1260,7 +1260,7 @@ details summary::-webkit-details-marker {
     }
     .sgem-efc-cal-right-add-class .sgem-efc-cal-1-result-footer .sgem-efc-content {
         font-size: 0.8em;
-		margin-top : 10px;
+		margin-top : 30px;
     }
     .sgem-efc-cal-right-add-class .sgem-efc-form-flex .sgem-result-value{
         font-size: 1em;
